greentrack/force-app/main/default/objects/Eco_Activity__c/Eco_Activity__c.object-meta.xml
<CustomObject>
    <label>Eco Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eco Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>