greentrack/force-app/main/default/objects/Eco_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Choose type of activity</description>
    <inlineHelpText>Choose type of activity</inlineHelpText>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Awareness Drive</fullName>
            </value>
            <value>
                <fullName>Recycling</fullName>
            </value>
            <value>
                <fullName>Tree Plantation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>