greentrack/force-app/main/default/objects/Eco_Activity__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Badge</label>
    <referenceTo>Badge__c</referenceTo>
    <relationshipLabel>Eco Activities</relationshipLabel>
    <relationshipName>Eco_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>