greentrack/force-app/main/default/objects/Eco_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date of the activity</description>
    <inlineHelpText>Date of the activity</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>