greentrack/force-app/main/default/objects/Eco_Activity__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eco_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>