greentrack/force-app/main/default/objects/Eco_Activity__c/fields/Waste_Recycled__c.field-meta.xml
<CustomField>
    <fullName>Waste_Recycled__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Amount of waste recycled in KGs</description>
    <inlineHelpText>Amount of waste recycled in KGs</inlineHelpText>
    <label>Waste Recycled</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>