greentrack/force-app/main/default/objects/Eco_Activity__c/recordTypes/Awareness_Drive.recordType-meta.xml
<RecordType>
    <fullName>Awareness_Drive</fullName>
    <active>true</active>
    <description>Activities related to awareness drive</description>
    <label>Awareness Drive</label>
</RecordType>