greentrack/force-app/main/default/objects/Eco_Activity__c/recordTypes/Recycling.recordType-meta.xml
<RecordType>
    <fullName>Recycling</fullName>
    <active>true</active>
    <description>Activities related to recycling</description>
    <label>Recycling</label>
</RecordType>