greentrack/force-app/main/default/objects/Eco_Activity__c/validationRules/Validate_Awareness_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Awareness_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Activity_Type__c, &quot;Awareness Drive&quot;),
  ISBLANK( Description__c )
)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Please provide a description for the Awareness Drive.</errorMessage>
</ValidationRule>