greentrack/force-app/main/default/objects/Eco_Activity__c/validationRules/Validate_Trees_Planted.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Trees_Planted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Activity_Type__c, &quot;Tree Plantation&quot;),
  OR(
    ISBLANK(Trees_Planted__c),
    Trees_Planted__c &lt;= 0
  )
)</errorConditionFormula>
    <errorDisplayField>Trees_Planted__c</errorDisplayField>
    <errorMessage>Please enter a valid number of trees planted.</errorMessage>
</ValidationRule>